--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.4.17"
   }
 }
